Adds victory/defeat states

--- a/problems/DOM/prompts/simon-says/index.html
+++ b/problems/DOM/prompts/simon-says/index.html
@@ -12,7 +12,10 @@
 
   <div class="container">
 
-    <div class="indicator"></div>
+    <div class="indicator">
+      <h4 class='victory'>You Win!</h4>
+      <h4 class='defeat'>You have been defeated by simon.</h4>
+    </div>
 
     <ul class="buttons">
       <li><button class="red"></button></li>
