--- a/problems/DOM/prompts/on-scroll-event/on-scroll-event.html
+++ b/problems/DOM/prompts/on-scroll-event/on-scroll-event.html
@@ -13,6 +13,9 @@
     }
     .nav {
       margin: 0;
+      padding: 0;
+      top: 0;
+      left: 0;
       background-color: red;
       height: 30px;
       width: 100%;
